# opencolorigo

./: Dockerfile.ci  LICENSE  README.md  all.cpp  colorspace.cpp  colorspace.go  colorspace.h  config.cpp  config.go  context.cpp  context.go  context.h  go.mod  image_test.go  ocio.cpp  ocio.go  ocio.h  ocio_abi.h  ocio_test.go  pkgconfig.go  processor.cpp  processor.go  processor.h  storage.h  transform.cpp  transform.go  transform.h  transform_test.go
.github/workflows/: go.yml
cpp/: CMakeLists.txt  colorspace.cpp  config.cpp  context.cpp  ocio.cpp  ocio.h  ocio_abi.h  processor.cpp  shared_ptr_map.h  storage.h  transform.cpp
testdata/spi-vfx/: config.ocio  luts2
